replace css transition rules with variable, fixed align contact icons

--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -68,7 +68,7 @@ header {
 		padding-left: 1.8rem;
 		padding-right: 1.8rem;
 		border: 1px solid rgba(225, 225, 225, 0);
-		transition: all .25s ease-out;
+		transition: $transition;
 		&:hover {
 			border: 1px solid rgba(225, 225, 225, .2);
 			border-radius: 0.25rem;
