--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -73,6 +73,8 @@ h2 {
     .fa {
         color: $red;
         font-size: 1.37rem;
+        line-height: 1.6rem;
+        vertical-align: top;
     }
 }
 
@@ -82,7 +84,7 @@ h2 {
         height: 1.6rem;
         background-color: white;
         margin-right: 0.62rem;
-        transition: all .25s ease-out;
+        transition: $transition;
         .fa {
             line-height: 1.7rem;
             color: #0f0f0f;
@@ -120,7 +122,7 @@ h2 {
     transform: translate(-50%, -50%);
     opacity: .6;
     cursor: pointer;
-    transition: all 0.3s;
+    transition: transition;
     img {
         filter: invert(100%);
     }
